2002-04-15  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* combinatorics.man: Added doctools manpage.
	* math.man: Added doctools manpage.

2002-03-25  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* calculus.man: Fixed formatting errors in the doctools manpage.

2002-02-15  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* Update of calculus. #528434

	* calculus.man: New file, calculus documentation in doctools format.
	* calculus.test: New file, beginnings of testsuite

	* calculus.CHANGES:
	* calculus.README:
	* calculus.tcl:
	* pkgIndex.tcl: updated to calculus 0.3

2002-02-14  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* combinatorics.tcl
	* geometry.tcl (proc): Frink run

	* math::geometry: Version is now 1.0.1 to distinguish this from
	  the code in tcllib release 1.2

	* math: Version is now 1.2.1 to distinguish this from
	  the code in tcllib release 1.2

2002-01-18  Don Porter <dgp@users.sourceforge.net>

	* math.tcl: [namespace export Beta] got out of sync with the
	command name.
	* misc.tcl: removed [package provide math]; duplicated in
	math.tcl, a sync problem waiting to happen.

2002-01-18  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* Bumped version to 1.2.

2002-01-18  Andreas Kupries <andreas_kupries@users.sourceforge.net>

	* Added calculus functionality and fuzzy FP comparison as provided
	  by Arjen Markus <arjen.markus@wldelft.nl> as is. This code
	  currently has neither true testsuite nor good documentation but
	  was considered important enough to get in now. Polish has to
	  come in the subsequent patch releases.

2002-01-11  Kevin Kenny  <kennykb@users.sourceforge.net>

	* combinatorics.tcl: Removed incorrect 'package provide'.
	
2002-01-11  Kevin Kenny  <kennykb@users.sourceforge.net>

	* math.tcl: 
	* misc.tcl:
	* pkgIndex.tcl:
	* tclIndex: Reorganized so that math.tcl is a top-level 'package
	provide' script and loads a tclIndex.  The code from 'math.tcl'