@@ -2,25 +2,27 @@
 #    Test cases for the Calculus package
 #
 package require tcltest
-namespace import ::tcltest::*
+source [file join [pwd] [file dirname [info script]] calculus.tcl]
 
-#package require calculus
-source calculus.tcl
+namespace eval ::math::calculus::test {
+
+namespace import ::tcltest::test
+namespace import ::tcltest::cleanupTests
 namespace import ::math::calculus::*
 
 #
 # Simple test functions - exact result predictable!
 #
-proc const_func { x } {
+proc ::const_func { x } {
    return 1
 }
-proc linear_func { x } {
+proc ::linear_func { x } {
    return $x
 }
-proc downward_linear { x } {
+proc ::downward_linear { x } {
    return [expr {100.0-$x}]
 }
-proc downward_linear { x } {
+proc ::downward_linear { x } {
    return [expr {100.0-$x}]
 }
 
@@ -44,10 +46,10 @@ test "Integral-1.3" "Integral of expression" {
 } 5000.0
 
 
-proc const_func2d { x y } {
+proc ::const_func2d { x y } {
    return 1
 }
-proc linear_func2d { x y } {
+proc ::linear_func2d { x y } {
    return $x
 }
 
@@ -66,10 +68,10 @@ test "Integral2D-1.2" "Integral of linear 2D function" {
 #
 
 # xvec should one long!
-proc const_func { t xvec } { return 1.0 }
+proc ::const_func { t xvec } { return 1.0 }
 
 # xvec should be two long!
-proc dampened_oscillator { t xvec } {
+proc ::dampened_oscillator { t xvec } {
    set x  [lindex $xvec 0]
    set x1 [lindex $xvec 1]
    return [list $x1 [expr {-$x1-$x}]]
@@ -103,8 +105,13 @@ foreach method {eulerStep heunStep rungeKuttaStep} {
 # Boundary value problems:
 # use simple functions
 #
-proc coeffs { x } { return {1.0 0.0 0.0} }
-proc forces { x } { return 0.0 }
+proc ::coeffs { x } { return {1.0 0.0 0.0} }
+proc ::forces { x } { return 0.0 }
 
 puts [boundaryValueSecondOrder coeffs forces {0.0 1.0} {100.0 0.0} 10]
 puts [boundaryValueSecondOrder coeffs forces {0.0 0.0} {100.0 1.0} 10]
+
+cleanupTests
+}
+
+namespace delete ::math::calculus::test
